# Artheris_Drone

./: CMakeLists.txt  README.md  platformio.ini
components/ESP32Servo/: CMakeLists.txt
lib/SparkFun_ICM-20948_ArduinoLibrary-main/src/: ICM_20948.h
main/: CMakeLists.txt  cmd.c  cmd.h  cmd_led.c  cmd_led.h  cmd_motor.c  cmd_motor.h  config_motores.h  control_loop.c  control_loop.h  esc_arduino.cpp  esc_arduino.h  esc_config.h  filter.c  filter.h  idf_component.yml  imu.c  imu.h  imu_calib.c  imu_calib.h  kalman.c  kalman.h  led.c  led.h  log_wrap_shim.c  main.c  manual_mode.c  manual_mode.h  mode_control.c  mode_control.h  motor_ctrl.c  motor_ctrl.h  motor_state.c  motor_state.h  servo_esc.h  telemetry.c  telemetry.h  wifi_sta.c  wifi_sta.h
src/: main.cpp  manual_mode.cpp  motores.cpp  mpu.cpp  mpu.h  piloto_mode.cpp  variables.cpp  variables.h
